--- a/style.css
+++ b/style.css
@@ -3169,6 +3169,7 @@ td,th {
     text-align: center
 }
 
+/*desplegable 1*/
 .bck-dropdown.bck-dropdown-1 {
     background-color: #ffffff;
     border: 3px solid #ec6f59;
@@ -3202,55 +3203,379 @@ td,th {
     max-height: 800%;
 }
 
-.bck-dropdown-2 .bck-dropdown-button {
-    margin-top: 20px;
-    background: #00adee;
-    color: #fff;
-    text-align: center;
-    border: 1px solid #dcdada;
-    -webkit-border-top-left-radius: 5px;
-    -moz-border-radius-topleft: 5px;
-    border-top-left-radius: 5px;
-    -webkit-border-top-right-radius: 5px;
-    -moz-border-radius-topright: 5px;
-    border-top-right-radius: 5px
+/*desplegable 2*/
+.bck-dropdown.bck-dropdown-1 {
+    background-color: #ffffff;
+    border: 3px solid #208FCF;
+    margin-top: 10px;
+    border-radius: 30px 10px 37px 10px;
+    -webkit-border-radius: 30px 10px 37px 10px;
+    -moz-border-radius: 30px 10px 37px 10px;
+
+}
+
+.bck-dropdown-2 .bck-dropdown-titulo {
+    font-size: 2.5rem;
+    font-weight: 600;
+    padding-left: 10px;
+    color: #208FCF;
+    font-family: 'StradaOT-Semibd';
 }
 
 .bck-dropdown-2 .bck-dropdown-icon {
-    display: inline-block
+    background-color: #fff;
+    width: 25px;
+    height: 10px;
+    color: #208FCF;
 }
 
-.bck-dropdown-2 .fa-chevron-up:before {
-    content: "\f077";
-    font-size: inherit
+.bck-dropdown-2 .bck-dropdown-content {
+    background-color: #fff;
+    border: none;
+    padding-left: 17px;
+    border-radius: 30px 10px 37px 10px;
+    max-height: 800%;
 }
 
-.bck-dropdown-2 .fa-chevron-down:before {
-    content: "\f078";
-    font-size: inherit
+/*desplegable 3*/
+.bck-dropdown.bck-dropdown-3 {
+    background-color: #ffffff;
+    border: 3px solid #78AA42;
+    margin-top: 10px;
+    border-radius: 30px 10px 37px 10px;
+    -webkit-border-radius: 30px 10px 37px 10px;
+    -moz-border-radius: 30px 10px 37px 10px;
+
 }
 
-.bck-dropdown-2 .bck-dropdown-icon {
-    color: #fff
+.bck-dropdown-3 .bck-dropdown-titulo {
+    font-size: 2.5rem;
+    font-weight: 600;
+    padding-left: 10px;
+    color: #78AA42;
+    font-family: 'StradaOT-Semibd';
 }
 
-.bck-dropdown-3 .bck-dropdown-icon>.fa {
-    border: 3px solid #2e72b7
+.bck-dropdown-3 .bck-dropdown-icon {
+    background-color: #fff;
+    width: 25px;
+    height: 10px;
+    color: #78AA42;
 }
 
-.bck-dropdown-3 .bck-dropdown-titulo,.bck-dropdown-3 .fa-chevron-down:before,.bck-dropdown-3 .fa-chevron-up:before {
-    color: #2e72b7
+.bck-dropdown-3 .bck-dropdown-content {
+    background-color: #fff;
+    border: none;
+    padding-left: 17px;
+    border-radius: 30px 10px 37px 10px;
+    max-height: 800%;
 }
 
-.bck-dropdown-2.activities-dropdown .fa-chevron-down:before,.bck-dropdown-2.activities-dropdown .fa-chevron-up:before {
-    content: "\f0ae"
+/*desplegable 4 */
+.bck-dropdown.bck-dropdown-4 {
+    background-color: #ffffff;
+    border: 3px solid #E79F25;
+    margin-top: 10px;
+    border-radius: 30px 10px 37px 10px;
+    -webkit-border-radius: 30px 10px 37px 10px;
+    -moz-border-radius: 30px 10px 37px 10px;
+
 }
 
-.bck-dropdown-2.activities-dropdown .bck-dropdown-content {
-    position: relative;
-    border: 0;
-    padding-left: 120px;
-    padding-right: 0
+.bck-dropdown-4 .bck-dropdown-titulo {
+    font-size: 2.5rem;
+    font-weight: 600;
+    padding-left: 10px;
+    color: #E79F25;
+    font-family: 'StradaOT-Semibd';
+}
+
+.bck-dropdown-4 .bck-dropdown-icon {
+    background-color: #fff;
+    width: 25px;
+    height: 10px;
+    color: #E79F25;
+}
+
+.bck-dropdown-4 .bck-dropdown-content {
+    background-color: #fff;
+    border: none;
+    padding-left: 17px;
+    border-radius: 30px 10px 37px 10px;
+    max-height: 800%;
+}
+
+/*desplegable 5 */
+.bck-dropdown.bck-dropdown-5 {
+    background-color: #ffffff;
+    border: 3px solid #006294;
+    margin-top: 10px;
+    border-radius: 30px 10px 37px 10px;
+    -webkit-border-radius: 30px 10px 37px 10px;
+    -moz-border-radius: 30px 10px 37px 10px;
+
+}
+
+.bck-dropdown-5 .bck-dropdown-titulo {
+    font-size: 2.5rem;
+    font-weight: 600;
+    padding-left: 10px;
+    color: #006294;
+    font-family: 'StradaOT-Semibd';
+}
+
+.bck-dropdown-5 .bck-dropdown-icon {
+    background-color: #fff;
+    width: 25px;
+    height: 10px;
+    color: #006294;
+}
+
+.bck-dropdown-5 .bck-dropdown-content {
+    background-color: #fff;
+    border: none;
+    padding-left: 17px;
+    border-radius: 30px 10px 37px 10px;
+    max-height: 800%;
+}
+
+/*desplegable 6 */
+.bck-dropdown.bck-dropdown-6 {
+    background-color: #ffffff;
+    border: 3px solid #006294;
+    margin-top: 10px;
+    border-radius: 30px 10px 37px 10px;
+    -webkit-border-radius: 30px 10px 37px 10px;
+    -moz-border-radius: 30px 10px 37px 10px;
+
+}
+
+.bck-dropdown-6 .bck-dropdown-titulo {
+    font-size: 2.5rem;
+    font-weight: 600;
+    padding-left: 10px;
+    color: #006294;
+    font-family: 'StradaOT-Semibd';
+}
+
+.bck-dropdown-6 .bck-dropdown-icon {
+    background-color: #fff;
+    width: 25px;
+    height: 10px;
+    color: #006294;
+}
+
+.bck-dropdown-6 .bck-dropdown-content {
+    background-color: #fff;
+    border: none;
+    padding-left: 17px;
+    border-radius: 30px 10px 37px 10px;
+    max-height: 800%;
+}
+
+/*desplegable 7 */
+.bck-dropdown.bck-dropdown-7 {
+    background-color: #ffffff;
+    border: 3px solid #B51F7E;
+    margin-top: 10px;
+    border-radius: 30px 10px 37px 10px;
+    -webkit-border-radius: 30px 10px 37px 10px;
+    -moz-border-radius: 30px 10px 37px 10px;
+
+}
+
+.bck-dropdown-7 .bck-dropdown-titulo {
+    font-size: 2.5rem;
+    font-weight: 600;
+    padding-left: 10px;
+    color: #B51F7E;
+    font-family: 'StradaOT-Semibd';
+}
+
+.bck-dropdown-7 .bck-dropdown-icon {
+    background-color: #fff;
+    width: 25px;
+    height: 10px;
+    color: #B51F7E;
+}
+
+.bck-dropdown-7 .bck-dropdown-content {
+    background-color: #fff;
+    border: none;
+    padding-left: 17px;
+    border-radius: 30px 10px 37px 10px;
+    max-height: 800%;
+}
+
+
+/*desplegable 8 */
+.bck-dropdown.bck-dropdown-8 {
+    background-color: #ffffff;
+    border: 3px solid #006F41;
+    margin-top: 10px;
+    border-radius: 30px 10px 37px 10px;
+    -webkit-border-radius: 30px 10px 37px 10px;
+    -moz-border-radius: 30px 10px 37px 10px;
+
+}
+
+.bck-dropdown-8  .bck-dropdown-titulo {
+    font-size: 2.5rem;
+    font-weight: 600;
+    padding-left: 10px;
+    color: #006F41;
+    font-family: 'StradaOT-Semibd';
+}
+
+.bck-dropdown-8 .bck-dropdown-icon {
+    background-color: #fff;
+    width: 25px;
+    height: 10px;
+    color: #006F41;
+}
+
+.bck-dropdown-8 .bck-dropdown-content {
+    background-color: #fff;
+    border: none;
+    padding-left: 17px;
+    border-radius: 30px 10px 37px 10px;
+    max-height: 800%;
+}
+
+/*desplegable 9 */
+.bck-dropdown.bck-dropdown-9 {
+    background-color: #ffffff;
+    border: 3px solid #E0C002;
+    margin-top: 10px;
+    border-radius: 30px 10px 37px 10px;
+    -webkit-border-radius: 30px 10px 37px 10px;
+    -moz-border-radius: 30px 10px 37px 10px;
+
+}
+
+.bck-dropdown-9 .bck-dropdown-titulo {
+    font-size: 2.5rem;
+    font-weight: 600;
+    padding-left: 10px;
+    color: #E0C002;
+    font-family: 'StradaOT-Semibd';
+}
+
+.bck-dropdown-9 .bck-dropdown-icon {
+    background-color: #fff;
+    width: 25px;
+    height: 10px;
+    color: #E0C002;
+}
+
+.bck-dropdown-9 .bck-dropdown-content {
+    background-color: #fff;
+    border: none;
+    padding-left: 17px;
+    border-radius: 30px 10px 37px 10px;
+    max-height: 800%;
+}
+
+/*desplegable 10 */
+.bck-dropdown.bck-dropdown-10 {
+    background-color: #ffffff;
+    border: 3px solid #A10436;
+    margin-top: 10px;
+    border-radius: 30px 10px 37px 10px;
+    -webkit-border-radius: 30px 10px 37px 10px;
+    -moz-border-radius: 30px 10px 37px 10px;
+
+}
+
+.bck-dropdown-10 .bck-dropdown-titulo {
+    font-size: 2.5rem;
+    font-weight: 600;
+    padding-left: 10px;
+    color: #A10436;
+    font-family: 'StradaOT-Semibd';
+}
+
+.bck-dropdown-10 .bck-dropdown-icon {
+    background-color: #fff;
+    width: 25px;
+    height: 10px;
+    color: #A10436;
+}
+
+.bck-dropdown-10 .bck-dropdown-content {
+    background-color: #fff;
+    border: none;
+    padding-left: 17px;
+    border-radius: 30px 10px 37px 10px;
+    max-height: 800%;
+}
+
+/*desplegable 11 */
+.bck-dropdown.bck-dropdown-11 {
+    background-color: #ffffff;
+    border: 3px solid #738A96;
+    margin-top: 10px;
+    border-radius: 30px 10px 37px 10px;
+    -webkit-border-radius: 30px 10px 37px 10px;
+    -moz-border-radius: 30px 10px 37px 10px;
+
+}
+
+.bck-dropdown-11 .bck-dropdown-titulo {
+    font-size: 2.5rem;
+    font-weight: 600;
+    padding-left: 10px;
+    color: #738A96;
+    font-family: 'StradaOT-Semibd';
+}
+
+.bck-dropdown-11 .bck-dropdown-icon {
+    background-color: #fff;
+    width: 25px;
+    height: 10px;
+    color: #738A96;
+}
+
+.bck-dropdown-11 .bck-dropdown-content {
+    background-color: #fff;
+    border: none;
+    padding-left: 17px;
+    border-radius: 30px 10px 37px 10px;
+    max-height: 800%;
+}
+
+/*desplegable 12 */
+.bck-dropdown.bck-dropdown-12 {
+    background-color: #ffffff;
+    border: 3px solid #00B6ED;
+    margin-top: 10px;
+    border-radius: 30px 10px 37px 10px;
+    -webkit-border-radius: 30px 10px 37px 10px;
+    -moz-border-radius: 30px 10px 37px 10px;
+
+}
+
+.bck-dropdown-12 .bck-dropdown-titulo {
+    font-size: 2.5rem;
+    font-weight: 600;
+    padding-left: 10px;
+    color: #00B6ED;
+    font-family: 'StradaOT-Semibd';
+}
+
+.bck-dropdown-12 .bck-dropdown-icon {
+    background-color: #fff;
+    width: 25px;
+    height: 10px;
+    color: #00B6ED;
+}
+
+.bck-dropdown-12 .bck-dropdown-content {
+    background-color: #fff;
+    border: none;
+    padding-left: 17px;
+    border-radius: 30px 10px 37px 10px;
+    max-height: 800%;
 }
 
 .bck-box .chooseblanks p,.bck-box .fillblanks p,.bck-dropdown-2.activities-dropdown .bck-box p {
