--- a/style.css
+++ b/style.css
@@ -2884,6 +2884,29 @@ display: none;
     font-size:2.5rem;
 }
 
+
+.bck-box.bck-box-29 {
+    padding: 30px 30px 7px 30px;
+        background-color: #DAEDF8;
+        border-radius: 155px 55px 119px 67px/55px 125px 31px 111px;
+}
+
+.bck-box.bck-box-29>.bck-title p {
+    font-size: 2.8rem;
+}
+
+.bck-box.bck-box-29>.bck-title {
+    color: #738A96;
+        border: none;
+}
+
+.bck-box.bck-box-29>.bck-content {
+    color: #1F1A15;
+    border-radius: 10px;
+    padding: 6px 25px 6px 23px;
+    border-radius: 0;
+}
+
 .bck-title {
     border-bottom: none
 }
