--- a/style.css
+++ b/style.css
@@ -2947,8 +2947,10 @@ display: none;
 
 /*iconos*/
 .item-container .icon:before {
-    height: 27px;
-    width: 41px;
+        height: 22px;
+    width: 34px;
+    margin-right: 5px;
+    margin-top: -5px;
 }
 
 
@@ -2993,7 +2995,7 @@ display: none;
     background-image: url(images/icono_hablar_morado.png);
 }
 
-..item-container .icon-hablarBurdeos:before {
+.item-container .icon-hablarBurdeos:before {
     background-image: url(images/icono_audio_burdeos.PNG);
 }
 
