--- a/style.css
+++ b/style.css
@@ -3699,7 +3699,7 @@ td,th {
 }
 
 .activitytag_vocabulary .bck-box.bck-box-3:after {
-    background-image: url(images/icono_caja_02verdederecha.png);
+    background-image: url(images/icono_caja_02azulB);
 }
 
 .activitytag_vocabulary .bck-dropdown.bck-dropdown-1 {
