--- a/style.css
+++ b/style.css
@@ -2907,6 +2907,13 @@ display: none;
     border-radius: 0;
 }
 
+.bck-box.bck-box-30 {
+    BORDER: 3px solid #35B2B4;
+    border-radius: 20px 80px 20px 80px;
+    padding: 14px 38px 19px 32px;
+    background-color:   #fff;
+}
+
 .bck-title {
     border-bottom: none
 }
