--- a/style.css
+++ b/style.css
@@ -2945,11 +2945,11 @@ background-image: url(images/icono_caja_01a.png);
     position: absolute;
     left: -120px;
     z-index: 100;
-    padding: 41px;
+    padding: 75px 0;
     background-repeat: no-repeat;
     background-size: contain;
     display: inline-block;
-    top: 12px;
+    top: 126px;
     border: none;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
