--- a/style.css
+++ b/style.css
@@ -1031,28 +1031,26 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 
 
 .bck-title-28 {
-    color: #006F41;
+    color: #fff;
     font-size: 2.5rem;
     text-align: left;
-    font-family: 'ZineSlabDisOT-Medi';
-    padding-top: 10px;
+    padding-top: 44px;
+    padding-bottom: 7px;
+    padding-left: 314px;
     font-weight: 400;
+    background-color: #35b2b4;
 }
 
 .bck-title-28:before {
     content: "";
     background-image: url(images/icono_title_05.jpg);
     background-size: contain;
-    background-repeat: repeat;
-    z-index: 100;
-    width: 28%;
-    padding: 10px 11px 10px 24px;
-    display: inline-block;
-    color: #fff;
-    -moz-border-radius: 20px 0 0 50px;
-    border-radius: 20px 0 0 50px;
-    margin-right: 6px;
-    vertical-align: sub;
+    background-size: contain;
+    background-repeat: no-repeat;
+    padding: 0px 224px 76px 77px;
+    margin-top: -39px;
+    position: absolute;
+    left: 3px;
 }
 
 /*enfasis*/
